# ai-assistant

./: .env.example  .gitignore  README.md  date_time.py  exit.py  functions.py  gemini.py  gettts.py  gui.py  jarvis.iss  jarvis.py  jarvis.spec  keys.json  main.py  mouse.py  music.py  musicPlaylist.py  music_function.py  nvda.py  play_sound.py  pyproject.toml  requirements.txt  screenshot.py  search.py  settings.json  stt.py  terminal.py  timer.py  tts.py  user_call.py  user_keyboard.py  youtube.py  youtube_search.py
.github/workflows/: build.yml
