[project]
name = "homeassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "edge-tts>=7.2.3",
    "google-generativeai>=0.8.5",
    "googlesearch-python>=1.3.0",
    "keyboard>=0.13.5",
    "pillow>=12.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pyinstaller>=6.16.0",
    "python-dotenv>=1.1.1",
    "python-vlc>=3.0.21203",
    "requests>=2.32.5",
    "speechrecognition>=3.14.3",
    "wxpython>=4.2.3",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.10.14",
]
